--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     },
     "scripts": {
         "start": "node index.js",
-        "nodemon": "nodemon index.js"
-    }
+        "nodemon": "nodemon index.js 192.168.1.35 7000"
+    },
+    "main": "index.js",
+    "repository": "https://github.com/Eng-Khaled-Alhadi/chat-example.git",
+    "author": "Khalid Alhadi <85607311+Eng-Khaled-Alhadi@users.noreply.github.com>",
+    "license": "MIT"
 }
