--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "socket.io": "^4.1.2"
     },
     "scripts": {
-        "start": "node index.js",
-        "nodemon": "nodemon index.js 192.168.1.35 7000"
+        "start": "node index.js"
     },
     "main": "index.js",
     "repository": "https://github.com/Eng-Khaled-Alhadi/chat-example.git",
