--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.0.1",
     "description": "my first socket.io app",
     "dependencies": {
+        "@bdaenen/uwebsockets": "^19.5.0",
         "express": "^4.17.1",
-        "socket.io": "^4.1.2"
+        "socket.io": "^4.4.0"
     },
     "scripts": {
         "start": "node index.js"
