--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "dependencies": {
         "@bdaenen/uwebsockets": "^19.5.0",
         "express": "^4.17.1",
-        "socket.io": "^4.4.0"
+        "socket.io": "^4.4.0",
+        "websocket": "^1.0.34"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node server.js"
     },
     "main": "index.js",
     "repository": "https://github.com/Eng-Khaled-Alhadi/chat-example.git",
