--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-    "name": "socket-chat-example",
-    "version": "0.0.1",
-    "description": "my first socket.io app",
-    "dependencies": {
-        "@bdaenen/uwebsockets": "^19.5.0",
-        "express": "^4.17.3",
-        "socket.io": "^4.4.0",
-        "websocket": "^1.0.34"
-    },
+    "name": "chatappbackend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
     "scripts": {
-        "start": "node server.js chat-eagle.herokuapp.com 3000",
-        "start1": "node server.js localhost 4000"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
-    "main": "index.js",
-    "repository": "https://github.com/Eng-Khaled-Alhadi/chat-example.git",
     "author": "Khalid Alhadi <85607311+Eng-Khaled-Alhadi@users.noreply.github.com>",
-    "license": "MIT"
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "socket.io": "^4.4.1"
+    },
+    "repository": "https://github.com/ngirimana/socketio.git"
 }
